Fix mobile searchModal overlap bug

--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0);
 
   display: flex;
